...
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name_hint" />

        <TextView
...
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:text="@string/email_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

...
